I found a esp8266 laying around so no need to emulate a microcontroler anymore got it to flash 10 times now how do I connect leds to it

--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,5 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,visualstudiocode,linux,windows,macos,c++,zsh,git,c,python
+sdkconfig  sdkconfig.old
+build
